<resources>
    <string name="app_name">Yelp</string>
    <string name="action_settings">Setting</string>
    <string name="action_search">Search</string>
    <string name="action_record">Record Video</string>
    <string name="action_save">Save</string>
    <string name="action_label">Add Label</string>
    <string name="action_play">Play Video</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_label">Yelp</string>
    <string name="search_hint">Search for your target</string>
    <string name="currentlocation">Current Location</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="google_api_key">AIzaSyBhMnzm9f-OXSUZmn8k6Lfxt_pTJ2Enq8s</string>
    <string name="ic_star_black_24dp">0</string>
    <string name="ic_star_border_black_24dp">1</string>
    <string-array name="menu_option">
        <item>Restaurants</item>
        <item>Bars</item>
        <item>Nightlife</item>
        <item>Coffee and Tea</item>
        <item>Hot New Business</item>
        <item>Delivery</item>
        <item>Gas and Service Stations</item>
        <item>Drugstores</item>
        <item>Reservation</item>
        <item>Favorite</item>
    </string-array>
</resources>
